# estore-analytics

./: .gitignore  LICENSE  README.md
.github/workflows/: cd.yml  ci-dagster.yml  ci-dbt.yml  ci-omni-content-validator.yml  ci.yml  refresh-omni-state.yml  terraform.yml
analysis/: README.md
analysis/images/: README.md
dagster-project/: pyproject.toml
dagster-project/src/dagster_project/components/: custom_omni.py
dagster-project/src/dagster_project/defs/assets/: __init__.py  gcs_to_bq_load_asset.py  source_assets.py
dagster-project/src/dagster_project/defs/dbt/: defs.yaml
dagster-project/src/dagster_project/defs/jobs/: __init__.py
dagster-project/src/dagster_project/defs/omni_ingest/: defs.yaml
dagster-project/src/dagster_project/defs/resources/: __init__.py  gcp_resources.py  slack_resource.py
dagster-project/src/dagster_project/defs/schedules/: __init__.py
dagster-project/src/dagster_project/defs/sensors/: __init__.py  dbt_run_on_load_sensor.py  gcs_new_file_sensor.py  run_failure_sensor.py
dagster-project/tests/: test_definitions.py  test_schedules.py
dbt-project/: .sqlfluff  .sqlfluffignore  dbt_project.yml  profiles.yml  profiles.yml.example
dbt-project/macros/: conversion_metrics.sql  incremental_max_date.sql  one_hot.sql
dbt-project/models/: exposures.yml  test_file.sql  test_model.sql
dbt-project/models/marts/: README.md  dim_categories.sql  dim_categories.yml  dim_products.sql  dim_products.yml  dim_user_rfm.sql  dim_user_rfm.yml  dim_users.sql  dim_users.yml  fct_events.sql  fct_events.yml  fct_sessions.sql  fct_sessions.yml  fct_sessions_cleaned.sql  fct_sessions_cleaned.yml  metrics_churn.sql  metrics_churn.yml  metrics_conversion_rates.sql  metrics_conversion_rates.yml  metrics_rfm_segments.sql  metrics_rfm_segments.yml  schema.yml  vw_daily_conversion_metrics.sql  vw_rfm_segments.sql  (+1 more)
dbt-project/snapshots/: snap_user_rfm.yml  snap_user_status.yml
docs/: orchestration.md
docs/diagrams/: pipeline.d2
estore/: dbt_project.yml
images/: README.md
images/data_viz/: README.md
images/screenshots/: README.md
omni/BigQuery/: Customers.topic.yaml  Events.topic.yaml  Users.topic.yaml  fct_sessions.topic.yaml  model.yaml  relationships.yaml  sessions.topic.yaml
terraform/: README.md  main.tf  outputs.tf  startup.sh  terraform.tfvars.example  variables.tf
visualizations/: README.md
(+39 files in other folders)
