[project]
name = "dagster_project"
requires-python = ">=3.9,<3.14"
version = "0.1.0"
dependencies = [
    "dagster==1.11.14",
    "dagster-dbt==0.27.14",
    "dbt-bigquery==1.10.2"
]

[project.optional-dependencies]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "dagster_project"
registry_modules = [
    "dagster_project.components.*",
]