[project]
name = "dagster_project"
requires-python = ">=3.10,<3.14"
version = "0.1.0"
dependencies = [
    "dagster==1.12.18",
    "dagster-dbt==0.28.18",
    "dagster-webserver==1.12.18",
    "dbt-bigquery==1.10.2",
    "dagster-gcp==0.28.18",
    "google-cloud-bigquery==3.38.0",
    "dagster-slack==0.28.18"
]

[project.optional-dependencies]
dev = [
    "dagster-dg-cli",
    "pytest>=7.0.0"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "dagster_project"
registry_modules = [
    "dagster_project.components.*",
]

[tool.dagster]
module_name = "dagster_project.definitions"